--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -7,4 +7,8 @@ jobs:
             - name: Get Code
               uses: actions/checkout@v3
             - name: Run Unit tests
-              run: prove -v
+              run: |
+                    sudo apt update -y
+                    sudo apt install cpan
+                    sudo cpan install Test::Fatal
+                    prove -v
