--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -4,11 +4,9 @@ jobs:
     unit_test:
         runs-on: ubuntu-latest
         steps:
-            - name: Get Code
-              uses: actions/checkout@v3
-            - name: Run Unit tests
-              run: |
-                    sudo apt update -y
-                    sudo apt install cpan
-                    sudo cpan install Test::Fatal
-                    prove -v
+            - uses: actions/checkout@v3
+            - uses: shogo82148/actions-setup-perl@v1
+              with:
+                perl-version: '5.34'
+            - run: cpanm --installdeps .
+            - run: prove -lv t                
