--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -5,8 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: shogo82148/actions-setup-perl@v1
-              with:
-                perl-version: '5.34'
-            - run: cpanm --installdeps .
-            - run: prove -lv t                
+            - run: sudo apt-get install -y libxml2-utils
