--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -5,4 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - run: sudo apt-get install -y libxml2-utils
+            - run: sudo apt-get install -y libcam-pdf-perl
