--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -6,3 +6,5 @@ jobs:
         steps:
             - uses: actions/checkout@v3
             - run: sudo apt-get install -y libcam-pdf-perl
+            - run: sudo cpan install Test::Fatal
+            - run: prove
