--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -7,4 +7,5 @@ jobs:
             - uses: actions/checkout@v3
             - run: sudo apt-get install -y libcam-pdf-perl
             - run: sudo cpan install Test::Fatal
+            - run: pwd
             - run: prove
