--- a/.github/workflows/unit-testcases.yml
+++ b/.github/workflows/unit-testcases.yml
@@ -10,4 +10,5 @@ jobs:
             - run: |
                     pwd
                     ls -ltr
+                    export PERL5LIB=.
             - run: prove
